# k8shelm

./: .gitignore  DOCKER_COMPOSE.md  K8S_HELM_GUIDE.md  Makefile  QUICK_START.md  README.md  docker-compose.yml
go-service/: Dockerfile  Makefile  go.mod  handler.go  main.go
go-service-chart/: Chart.yaml  values.yaml
go-service-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
go-service-chart/templates/tests/: test-connection.yaml
python-service/: Dockerfile  Makefile  main.py  requirements.txt
python-service-chart/: Chart.yaml  values.yaml
python-service-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
python-service-chart/templates/tests/: test-connection.yaml
rust-service/: Cargo.toml  Dockerfile  Makefile  workflow.md
rust-service-chart/: Chart.yaml  values.yaml
rust-service-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
rust-service-chart/templates/tests/: test-connection.yaml
rust-service/src/: config.rs  main.rs
rust-service/src/models/: mod.rs
rust-service/src/routes/: health.rs  mod.rs  welcome.rs
